--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.4.3",
+    "@types/hapi-pino": "^9.1.3",
     "@types/hapi__hapi": "^21.0.0",
     "@types/node": "^24.10.0",
     "bcrypt": "^6.0.0",
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "hapi-pino": "^13.0.0",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
