feat(compiler) : fix tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
 
    
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["node"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
