--- a/package.json
+++ b/package.json
@@ -17,21 +17,25 @@
     "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
     "@types/express": "^5.0.5",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.10",
-    "@types/pg": "^8.15.6",
-    "pino-pretty": "^13.1.2",
     "@types/hapi__hapi": "^21.0.0",
     "@types/hapi-pino": "^9.1.3",
-    "@types/node": "^22.0.0"
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^22.0.0",
+    "@types/pg": "^8.15.6",
+    "pino-pretty": "^13.1.2"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@hapi/hapi": "^21.4.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@types/joi": "^17.2.3",
+    "@types/xlsx": "^0.0.36",
     "bcrypt": "^6.0.0",
     "concurrently": "^9.2.1",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "good-winston": "^4.0.0",
@@ -39,12 +43,14 @@
     "hapi-pino": "^13.0.0",
     "i": "^0.3.7",
     "install": "^0.13.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.18.3",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.12"
   }
 }
